# geant4-simulation

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  G4sim.cc  GeoTest.cc  README.md  batch.mac  cleanup-docs.sh  environment.yml  neutronLXe.cc  neutron_data.root  pre_init.mac  run_batch.mac  vis.g4sim.mac  vis.mac
config/: advanced_geometry.json  geo_test.json  geometry-4.json  geometry.json  geometry_long.json  geometry_union.json  geometry_v2.json  materials.json  super_advanced_geometry.json
docs/: .gitignore  ActionInitialization_8cc.xml  ActionInitialization_8hh.xml  DetectorConstruction_8cc.xml  DetectorConstruction_8hh.xml  Doxyfile  GeometryParser_8cc.xml  GeometryParser_8hh.xml  PrimaryGeneratorAction_8cc.xml  PrimaryGeneratorAction_8hh.xml  RunAction_8cc.xml  RunAction_8hh.xml  api.rst  build_docs.sh  classActionInitialization.xml  classDetectorConstruction.xml  classG4UserRunAction.xml  classG4VUserActionInitialization.xml  classG4VUserDetectorConstruction.xml  classG4VUserPrimaryGeneratorAction.xml  classGeometryParser.xml  classPrimaryGeneratorAction.xml  classRunAction.xml  cleanup_docs.sh  conf.py  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  geometry.rst  index.html  index.xml  requirements.txt  simulation.rst
docs/doxygen/: Doxyfile
docs/html/: ActionInitialization_8cc.html  ActionInitialization_8hh.html  ActionInitialization_8hh_source.html  DetectorConstruction_8cc.html  DetectorConstruction_8hh.html  DetectorConstruction_8hh_source.html  GeometryParser_8cc.html  GeometryParser_8hh.html  GeometryParser_8hh_source.html  PrimaryGeneratorAction_8cc.html  PrimaryGeneratorAction_8hh.html  PrimaryGeneratorAction_8hh_source.html  RunAction_8cc.html  RunAction_8hh.html  RunAction_8hh_source.html  annotated.html  classActionInitialization-members.html  classActionInitialization.html  classDetectorConstruction-members.html  classDetectorConstruction.html  classG4UserRunAction.html  classG4VUserActionInitialization.html  classG4VUserDetectorConstruction.html  classG4VUserPrimaryGeneratorAction.html  classGeometryParser-members.html  classGeometryParser.html  classPrimaryGeneratorAction-members.html  classPrimaryGeneratorAction.html  classRunAction-members.html  classRunAction.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_type.html  hierarchy.html  (+1 more)
geant4-geometry-editor/: README.md  debug.js  package-lock.json  package.json
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  GeometryParser.hh  MyHit.hh  MySensitiveDetector.hh  PrimaryGeneratorAction.hh  RunAction.hh  json.hpp
macros/: batch.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  GeometryParser.cc  MyHit.cc  MySensitiveDetector.cc  PrimaryGeneratorAction.cc  RunAction.cc
webapp/: app.py  config.py  requirements.txt
(+188 files in other folders)
